# raychess

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  main.cpp  main.hpp
src/common/: CMakeLists.txt  pos2d.cpp  pos2d.hpp
src/raychess_core/: CMakeLists.txt  game.cpp  game.hpp
src/raychess_core/game_areas/: area_base.hpp  board_area.cpp  board_area.hpp  capture_area.cpp  capture_area.hpp
src/raychess_core/pieces/: bishop.cpp  bishop.hpp  king.cpp  king.hpp  knight.cpp  knight.hpp  pawn.cpp  pawn.hpp  piece_base.hpp  queen.cpp  queen.hpp  rook.cpp  rook.hpp
